[package]
name = "guessing_game"
version = "0.1.0"
authors = ["chuanzong.lcz@alibaba-inc.com <chuanzong.lcz@alibaba-inc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
rand = "0.8.0"
chrono = "0.4"
